Fri Oct  3 20:49:58 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c: store analysis performed by computer player
	where possible.

Fri Oct  3 19:17:29 2003  Joern Thyssen  <jth@gnubg.org>

	* progress.c (TextRolloutProgress): no newline after
	\r.

Fri Oct  3 19:08:51 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (TheoryUpdated): argh, it should be
	bg <= 1.0-g.
	(reported by Massimiliano Maini)

Thu Oct  2 20:48:23 2003  Joern Thyssen  <jth@gnubg.org>

	* formatgs.c (errorRateMP): remove extra digit in 
	error rates.
	(suggested by olivier croisille)

Thu Oct  2 20:21:21 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportSGGGame): ensure that resignations are in the
	range 1 (normal) to 3 (backgammon)
	(bug #5641 reported by Bert Van Kerckhove)

Thu Oct  2 19:57:56 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c (printTextBoard): assign asz[7] and asz[8] if
	USE_TIMECONTROL
	(reported by Jeff White)

Thu Oct  2 19:37:15 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (TheoryUpdated): ensure that bg <= g.

Thu Oct 2 10:59:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	play.c, gnubg.c: Added first move command

Wed Oct 1 2003 16:37:22 GMT Jim Segrave <jes@jes-2.demon.nl>

	* gtkboard.c - when changing the match length, update the limits
	  on the score spinner. Also ensure the dice are valid or not 
	  rolled. You can now increase the match length and then change a
	  score to be greater than the old match length.	

Tue Oct 1 9:38:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c: Fixed 2d board chequer shape setting.
	* gtkpboard.c, render.c: Fixed single chequer removal from bar in edit mode

Mon Sep 29 8:33:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtktoolbar.c: Remeber last used import/export type+directory.
	* gtkgame.c: Escape key exits fullscreen mode, added removable
		warning when fullscreen mode entered.

Fri Sep 26 2003 19:18:48 GMT Jim Segrave <jes@jes-2.demon.nl>
